精简和规范推送日志 (#8)
* 修正没有即将过期礼物时的报错
* 修正由于接口返回非Json内容导致异常退出
* 修正微信TOKEN长度定义

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -5,8 +5,8 @@ handlers=java.util.logging.ConsoleHandler,java.util.logging.FileHandler
 org.apache.http.level=OFF
 # 关闭默认配置
 # 向日志文件输出的 handler 对象
-# 指定日志文件路径 /tmp/daily.log
-java.util.logging.FileHandler.pattern=%t/daily.log
+# 指定日志文件路径 /tmp/bili-helper.log
+java.util.logging.FileHandler.pattern=%t/bili-helper.log
 # 指定日志文件内容大小
 java.util.logging.FileHandler.limit=50000
 # 指定日志文件数量
