--- a/src/main/resources/release.json
+++ b/src/main/resources/release.json
@@ -1,4 +1,5 @@
 {
-  "tag_main": "1.0.3",
-  "tag_latest": "1.0.3"
+  "tag_main": "1.0.4",
+  "tag_latest": "1.0.4",
+  "release_date": "2021-09-02"
 }
