--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,14 +1,27 @@
 {
-  "taskIntervalTime": 20,
-  "numberOfCoins": 5,
-  "reserveCoins": 10,
-  "selectLike": 0,
-  "monthEndAutoCharge": true,
-  "giveGift": true,
-  "upLive": "0",
-  "chargeForLove": "0",
-  "devicePlatform": "ios",
-  "coinAddPriority": 1,
-  "skipDailyTask": false,
-  "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36 Edg/91.0.864.54"
+  "biliCookies": "",
+  "taskConfig": {
+    "matchGame": false,
+    "showHandModel": false,
+    "predictNumberOfCoins": 1,
+    "minimumNumberOfCoins": 1000,
+    "taskIntervalTime": 20,
+    "numberOfCoins": 5,
+    "reserveCoins": 10,
+    "selectLike": 0,
+    "monthEndAutoCharge": true,
+    "giveGift": true,
+    "upLive": "0",
+    "chargeForLove": "14602398",
+    "chargeDay": 28,
+    "devicePlatform": "ios",
+    "coinAddPriority": 1,
+    "skipDailyTask": false,
+    "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.63 Safari/537.36 Edg/93.0.961.38"
+  },
+  "pushConfig": {
+    "SCT_KEY": "",
+    "TG_BOT_TOKEN": "",
+    "TG_USER_ID": ""
+  }
 }
