--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -32,7 +32,10 @@
     "DING_TALK_SECRET": "",
     "PUSH_PLUS_TOKEN": "",
     "WE_COM_GROUP_TOKEN": "",
-    "WE_COM_APP_TOKEN_CONF": "",
+    "WE_COM_APP_CORPID": "",
+    "WE_COM_APP_CORP_SECRET": "",
+    "WE_COM_APP_AGENT_ID": 0,
+    "WE_COM_APP_TO_USER": "",
     "PROXY_HTTP_HOST": "",
     "PROXY_SOCKET_HOST": "",
     "PROXY_PORT": 0
