--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -35,6 +35,7 @@
     "WE_COM_APP_CORPID": "",
     "WE_COM_APP_CORP_SECRET": "",
     "WE_COM_APP_AGENT_ID": 0,
+    "WE_COM_APP_MEDIA_ID": "",
     "WE_COM_APP_TO_USER": "",
     "PROXY_HTTP_HOST": "",
     "PROXY_SOCKET_HOST": "",
