:see_no_evil: 更新 .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Compiled class file
 *.class
-.DS_Store
 
 # Log file
 *.log
@@ -30,3 +29,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.DS_Store
+/bin/
+.classpath
+.factorypath
+.project
+.settings
